# sv-extraction-tools

./: .gitignore  README.md  pyproject.toml
echolabel/: __init__.py  cli.py  config.py  main.py  paths_validation.py
echolabel/extract/: __init__.py
echolabel/extract/callbacks/: __init__.py  table.py
echolabel/extract/core/: draw.py  figures.py  io.py  masking.py  processing.py
echolabel/extract/layout/components/: store.py  table.py
echolabel/label/: __init__.py  app.py  config.py  vizutils.py
echolabel/registry/: base.py  echotypes.py  images.py  shapes.py
echolabel/registry/labelme/: geometry.py  sync.py
echolabel/registry/sql/: base.py  echointegrations.py
echolabel/utils/: cli.py
notebooks/: interactive_echotypes_extraction.ipynb
scripts/: create_datasubset.py  echolabel_demo.py  echotypes_demo.py
src/echolabel/: __init__.py  config.py  main.py
src/echolabel/extract/: app.py
src/echolabel/extract/callbacks/: viz.py
src/echolabel/extract/layout/: main.py
src/echolabel/label/: __init__.py  dataloader.py
src/echolabel/registry/: __init__.py
src/echolabel/registry/labelme/: parser.py
src/echolabel/registry/sql/: base.py  echotypes.py  schema.sql  shapes.py
src/echolabel/utils/: cache.py
sv_extraction/: cli.py  demo_data.py  main.py
sv_extraction/cache/: dir.py
sv_extraction/echolabel/: app.py  config.py  main.py
sv_extraction/echotypes/: app.py
sv_extraction/registry/: base.py  echointegrations.py  shapes.py
sv_extraction/registry/labelme/: sync.py
