[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "sv-extraction"
version = "0.0.0"
description = "Interactive tools to extract data from echograms."
authors = [{name = "Gaspard Ringuenet", email = "gaspard.ringuenet@gmail.com"}]
requires-python = ">=3.11"
dependencies = [
    "dash",
    "dash-ag-grid",
    "dask",
    "flask",
    "labelme",
    "matplotlib",
    "numpy",
    "pandas",
    "Pillow",
    "plotly",
    "requests",
    "scikit-learn",
    "scipy",
    "tqdm",
    "xarray",
]

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools.package-data]
sv_extraction = [
    "registry/sql/schema.sql", 
    "echotypes/assets/**/*",
    "*.svg", 
    "*.css"
]