[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "echolabel"
version = "0.0.0"
description = "Interactive echogram labelling tools"
readme = "README.md"
authors = [{name = "Gaspard Ringuenet", email = "gaspard.ringuenet@proton.me"}]
requires-python = ">=3.11"
dependencies = [
    "dash",
    "dash-ag-grid",
    "dask",
    "flask",
    "labelme==6.0.0",
    "matplotlib",
    "numpy",
    "netcdf4",
    "pandas",
    "Pillow",
    "plotly",
    "requests",
    "scikit-learn",
    "scipy",
    "tqdm",
    "xarray",
    "platformdirs>=4.9.4",
    "rich>=14.3.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.2",
    "pytest-cov>=7.1.0",
]

[project.scripts]
echolabel = "echolabel.main:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
echolabel = [
    "registry/sql/schema.sql", 
    "echotypes/assets/**/*",
    "*.svg", 
    "*.css"
]

